Complete Service Layer and Create more repository methods